nenolod     2005/10/10 21:03:25 UTC	(20051010-2823)
  Log:
  - bump us up to 0.3beta5.
  

  Changes:	Modified:
  +11 -11	trunk/configure (File Modified) 
  +1 -1		trunk/configure.ac (File Modified) 


terminal    2005/10/10 04:12:13 UTC	(20051010-2821)
  Log:
  Some fixes to get closer to a compile on Win32/MinGW.

  Changes:	Modified:
  +2 -0		trunk/include/extern.h (File Modified) 
  +12 -5	trunk/include/stdinc.h (File Modified) 
  +2 -0		trunk/src/atheme.c (File Modified) 
  +9 -0		trunk/src/function.c (File Modified) 
  +7 -1		trunk/src/module.c (File Modified) 
  +6 -0		trunk/src/signal.c (File Modified) 


pfish       2005/10/10 00:15:26 UTC	(20051010-2819)
  Log:
  Wallops when SRA uses override to drop a nick/account 
  

  Changes:	Modified:
  +4 -0		trunk/modules/nickserv/drop.c (File Modified) 
  +3 -0		trunk/modules/userserv/drop.c (File Modified) 


pfish       2005/10/09 23:51:15 UTC	(20051009-2817)
  Log:
  Bugfix /US DROP
  

  Changes:	Modified:
  +1 -1		trunk/modules/userserv/drop.c (File Modified) 


pfish       2005/10/09 23:50:38 UTC	(20051009-2815)
  Log:
  Bugfix /NS DROP
  

  Changes:	Modified:
  +1 -1		trunk/modules/nickserv/drop.c (File Modified) 


kuja        2005/10/09 10:10:07 UTC	(20051009-2813)
  Log:
  My name is Jeff, not John. And the email was @gamesnet.com, not .net

  Changes:	Modified:
  +1 -1		trunk/src/version.sh (File Modified) 


terminal    2005/10/09 09:04:54 UTC	(20051009-2811)
  Log:
  dlX() win32 hack

  Changes:	Modified:
  +10 -0	trunk/libatheme/linker.c (File Modified) 


terminal    2005/10/09 03:00:52 UTC	(20051009-2809)
  Log:
  fix compile on Apple GCC - run not tested
  

  Changes:	Modified:
  +15 -2	trunk/configure (File Modified) 
  +11 -0	trunk/configure.ac (File Modified) 


terminal    2005/10/09 02:25:13 UTC	(20051009-2807)
  Log:
  oops, fixed delete all case again (untested)

  Changes:	Modified:
  +25 -25	trunk/modules/memoserv/delete.c (File Modified) 

