@@ -1,3 +1,12 @@
+nenolod     2005/10/10 21:53:24 UTC	(20051010-2825)
+  Log:
+  - ConfTable changes for later fun.
+  
+
+  Changes:	Modified:
+  +2 -0		trunk/include/confparse.h (File Modified) 
+
+
 nenolod     2005/10/10 21:03:25 UTC	(20051010-2823)
   Log:
   - bump us up to 0.3beta5.
